# kansas-comet

./: kansas-comet.cabal
example/: Main.hs  kansas-comet-example.cabal
example/Web/Scotty/: Comet.hs
example/js/: kansas-comet.js
static/js/: kansas-comet.js
