Name:                kansas-comet-example
Version:             0.3.0
Synopsis:            Example of Kansas Comet
License:             BSD3
Copyright:           (c) 2013 The University of Kansas
Build-type:          Simple
Cabal-version:       >= 1.10

data-files:
-- js
    js/jquery-json.js
    js/jquery-ui.js
    js/jquery.js

-- css
    css/ui-lightness/*.css
    css/ui-lightness/images/*.png

-- And the individual tests' index files.
    index.html

Executable kansas-comet-example
    Other-Modules:       Paths_kansas_comet_example
    Build-Depends:
         aeson                 >= 0.7   && < 0.9,
         base                  >= 4.6   && < 5,
         containers            == 0.5.*,
         data-default          == 0.5.*,
      --   kansas-comet          == 0.3.0,
         scotty                == 0.8.*,
         semigroups            >= 0.13,
         stm                   >= 2.4.2 && < 2.5,
         text                  == 1.1.*,
         transformers          >= 0.3   && < 0.5,
         wai-middleware-static >= 0.6.0 && < 0.7,
         websockets            == 0.8.*,
         wai-websockets        == 3.*,
         warp                  == 3.*,
        -- base                 >= 4.6   && < 4.8,
         --containers           == 0.5.*,
         --data-default         == 0.5.*,
         --scotty               >= 0.8   && < 0.10,
         stm                  >= 2.2   && < 2.5,
         --text                 >= 1.1   && < 1.3,
         time                 == 1.4.*,
         --transformers         >= 0.3   && < 0.5,
         unordered-containers >= 0.2.3 && < 0.2.6

    Main-is: Main.hs
    Hs-Source-Dirs: .
    Ghc-Options: -threaded
    default-language:    Haskell2010
